--- a/Pertemuan_1.ipynb
+++ b/Pertemuan_1.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN4ezs44hB0ff9s1xuAqkDc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +27,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
-        "id": "ootj57K8AcMJ"
+        "id": "ootj57K8AcMJ",
+        "outputId": "5f115387-8250-49e2-ee50-a9041db31588",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "hello world\n"
+          ]
+        }
+      ],
+      "source": [
+        "# prompt: print hello world\n",
+        "\n",
+        "print(\"hello world\")\n"
+      ]
     }
   ]
 }
