--- a/Pertemuan_1.ipynb
+++ b/Pertemuan_1.ipynb
@@ -27,13 +27,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "metadata": {
         "id": "ootj57K8AcMJ",
-        "outputId": "5f115387-8250-49e2-ee50-a9041db31588",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "5f59dbf5-42a6-4875-aeda-18f87d4c8ebc"
       },
       "outputs": [
         {
@@ -45,9 +45,9 @@
         }
       ],
       "source": [
-        "# prompt: print hello world\n",
+        "import pandas as pd\n",
         "\n",
-        "print(\"hello world\")\n"
+        "data = {'luas' : 16}"
       ]
     }
   ]
