Laporan Praktikum Pertemuan 1

--- a/Praktikum1/SimpleLinearRegression.ipynb
+++ b/Praktikum1/SimpleLinearRegression.ipynb
@@ -27,7 +27,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "b8DVQLrhD4jC",
         "outputId": "de08c8c0-366b-4348-a502-45c99146b630",
@@ -62,13 +62,28 @@
       "cell_type": "markdown",
       "source": [
         "# Penjelasan Kode\n",
-        "import pandas as pd = Mengimpor library pandas dan memberikan alias pd. pandas adalah library Python yang sangat populer untuk manipulasi dan analisis data.\n",
         "\n",
-        "data = {'luas' : [6,8,10,14,16], 'harga' : [7,9,13,17.5,18]} = Membuat sebuah dictionary dengan dua kunci, yaitu 'luas' dan 'harga'. Setiap kunci memiliki nilai berupa list yang berisi data numerik. Dictionary ini akan digunakan sebagai data untuk membuat DataFrame.\n",
         "\n",
-        "df = pd.DataFrame(data) = Membuat sebuah DataFrame dari dictionary data. DataFrame adalah struktur data dua dimensi yang disediakan oleh pandas, mirip dengan tabel dalam database atau spreadsheet.\n",
+        "```\n",
+        "import pandas as pd\n",
+        "```\n",
         "\n",
-        "print(df) = Memberikan output dari df"
+        "\n",
+        "Mengimpor library pandas dan memberikan alias pd. pandas adalah library Python yang sangat populer untuk manipulasi dan analisis data.\n",
+        "\n",
+        "```\n",
+        "data = {'luas' : [6,8,10,14,16], 'harga' : [7,9,13,17.5,18]}\n",
+        "```\n",
+        "\n",
+        "Membuat sebuah dictionary dengan dua kunci, yaitu 'luas' dan 'harga'. Setiap kunci memiliki nilai berupa list yang berisi data numerik. Dictionary ini akan digunakan sebagai data untuk membuat DataFrame.\n",
+        "```\n",
+        "df = pd.DataFrame(data)\n",
+        "```\n",
+        "Membuat sebuah DataFrame dari dictionary data. DataFrame adalah struktur data dua dimensi yang disediakan oleh pandas, mirip dengan tabel dalam database atau spreadsheet.\n",
+        "```\n",
+        "print(df)\n",
+        "```\n",
+        " Memberikan output dari df"
       ],
       "metadata": {
         "id": "YASM3LYIOzDe"
@@ -96,7 +111,7 @@
           "height": 472
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -195,7 +210,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -206,6 +221,27 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Penjelasan Kode\n",
+        "```\n",
+        "x = np.array(df['luas'])\n",
+        "y = np.array(df['harga'])\n",
+        "```\n",
+        "\n",
+        "Mengambil kolom 'luas' dan 'harga' dari DataFrame df dan mengonversinya menjadi sebuah array NumPy. Hasilnya disimpan dalam variabel x dan y.\n",
+        "\n",
+        "```\n",
+        "print(f'X: {x}')\n",
+        "print(f'Y: {y}')\n",
+        "```\n",
+        "Mencetak nilai dari variabel x dan y ke konsol dengan format string"
+      ],
+      "metadata": {
+        "id": "loAuWEAeE61c"
+      }
     },
     {
       "cell_type": "code",
@@ -222,7 +258,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -237,6 +273,24 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Penjelasan Kode\n",
+        "```\n",
+        "x = x.reshape(-1, 1)\n",
+        "```\n",
+        "Mengubah bentuk (shape) dari array x menjadi bentuk 2 dimensi dengan 1 kolom dan jumlah baris yang disesuaikan secara otomatis. Nilai -1 berarti NumPy akan secara otomatis menghitung jumlah baris yang diperlukan berdasarkan jumlah elemen dalam array dan jumlah kolom yang ditentukan. Nilai 1 berarti Menentukan bahwa array hasil reshape akan memiliki 1 kolom.\n",
+        "```\n",
+        "print(f'X Shape: {x.shape}')\n",
+        "print(x)\n",
+        "```\n",
+        "Mencetak bentuk (shape) dari array x menggunakan f-string dan Mencetak isi dari array x ke konsol.\n"
+      ],
+      "metadata": {
+        "id": "KnBqFeaVFlSj"
+      }
     },
     {
       "cell_type": "code",
@@ -254,7 +308,7 @@
           "height": 80
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -687,6 +741,23 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Penjelasan Kode\n",
+        "```\n",
+        "model = LinearRegression()\n",
+        "```\n",
+        "Membuat sebuah instance (objek) dari kelas LinearRegression yang disediakan oleh library scikit-learn. Inisialisasi model regresi linier. Model ini akan digunakan untuk mempelajari hubungan antara variabel independen (x) dan variabel dependen (y).\n",
+        "```\n",
+        "model.fit(x, y)\n",
+        "```\n",
+        "Melatih model regresi linier menggunakan data yang diberikan.\n"
+      ],
+      "metadata": {
+        "id": "nNdJKwMOGGEn"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "X_vis = np.array([0, 25]).reshape(-1, 1)\n",
@@ -695,8 +766,25 @@
       "metadata": {
         "id": "PAjsi1hYKG8o"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Penjelasan Kode\n",
+        "```\n",
+        "X_vis = np.array([0, 25]).reshape(-1, 1)\n",
+        "```\n",
+        "Membuat array NumPy yang berisi dua nilai, yaitu 0 dan 25, kemudian mengubah bentuknya menjadi array 2 dimensi dengan 1 kolom.\n",
+        "```\n",
+        "y_vis = model.predict(X_vis)\n",
+        "```\n",
+        "Menggunakan model regresi linier yang telah dilatih (model) untuk memprediksi nilai y berdasarkan nilai X_vis."
+      ],
+      "metadata": {
+        "id": "A_R3OaXHGxGA"
+      }
     },
     {
       "cell_type": "code",
@@ -717,7 +805,7 @@
           "height": 472
         }
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -732,6 +820,40 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Penjelasan Kode\n",
+        "```\n",
+        "plt.scatter(x, y)\n",
+        "```\n",
+        " Membuat scatter plot (plot titik) dari data x dan y\n",
+        "```\n",
+        "plt.plot(X_vis, y_vis, color='red')\n",
+        "```\n",
+        "Membuat garis regresi linier yang diprediksi oleh model.\n",
+        "```\n",
+        "plt.title('Perbandingan Luas Tanah dengan Harga Tanah')\n",
+        "```\n",
+        "Menambahkan judul pada plot. Judulnya adalah 'Perbandingan Luas Tanah dengan Harga Tanah'.\n",
+        "```\n",
+        "plt.xlabel('Luas Tanah (m^2)')\n",
+        "plt.ylabel('Harga Tanah')\n",
+        "```\n",
+        "Menambahkan label pada sumbu x. Labelnya adalah 'Luas Tanah (m^2)'.Menambahkan label pada sumbu y. Labelnya adalah 'Harga Tanah'.\n",
+        "```\n",
+        "plt.grid(True)\n",
+        "```\n",
+        "Menambahkan grid (garis bantu) pada plot untuk memudahkan pembacaan data.\n",
+        "```\n",
+        "plt.show()\n",
+        "```\n",
+        "Menampilkan plot yang telah dibuat ke layar."
+      ],
+      "metadata": {
+        "id": "Q2kQRSx9HIdZ"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "print(f'intercept: {model.intercept_}')\n",
@@ -744,7 +866,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -755,6 +877,20 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Penjelasan Kode\n",
+        "```\n",
+        "print(f'intercept: {model.intercept_}')\n",
+        "print(f'slope: {model.coef_}')\n",
+        "```\n",
+        "Mencetak nilai intercept (titik potong sumbu y) dari model regresi linier dan Mencetak nilai slope (koefisien) dari model regresi linier."
+      ],
+      "metadata": {
+        "id": "0SILWNg5H9cq"
+      }
     },
     {
       "cell_type": "code",
@@ -770,7 +906,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -794,6 +930,21 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Penjelasan Kode\n",
+        "```\n",
+        "luas_tanah = np.array([12,15,20]).reshape(-1,1)\n",
+        "print(luas_tanah.shape)\n",
+        "luas_tanah\n",
+        "```\n",
+        "Membuat array NumPy dari list [12, 15, 20] dan mengubah bentuknya menjadi array 2 dimensi dengan 1 kolom kemudian Mencetak bentuk (shape) dari array luas_tanah. luas_tanah Mencetak isi dari array luas_tanah ke konsol."
+      ],
+      "metadata": {
+        "id": "UtdJeDIrIWUo"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "harga_prediksi = model.predict(luas_tanah)\n",
@@ -806,7 +957,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -821,6 +972,20 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Penjelasan Kode\n",
+        "```\n",
+        "harga_prediksi = model.predict(luas_tanah)\n",
+        "harga_prediksi\n",
+        "```\n",
+        "Menggunakan model regresi linier yang telah dilatih (model) untuk memprediksi nilai y (harga tanah) berdasarkan nilai luas_tanah."
+      ],
+      "metadata": {
+        "id": "bWlFxpLYIt8H"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "X_train = np.array([6, 8, 10, 14, 18]).reshape(-1,1)\n",
@@ -832,8 +997,28 @@
       "metadata": {
         "id": "ynyeH2_5QL6T"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Penjelasan Kode\n",
+        "Kode akan membagi menjadi 2 data, yaitu data training dan data testing\n",
+        "```\n",
+        "X_train = np.array([6, 8, 10, 14, 18]).reshape(-1,1)\n",
+        "y_train = np.array([7, 9, 13, 17.5, 18])\n",
+        "```\n",
+        "Membuat array NumPy dari list [6, 8, 10, 14, 18] dan mengubah bentuknya menjadi array 2 dimensi dengan 1 kolom kedalam X_train. Kemudian Membuat array NumPy dari list [7, 9, 13, 17.5, 18] kedalam y_train.\n",
+        "```\n",
+        "X_test = np.array([9, 9, 11, 16, 12]).reshape(-1,1)\n",
+        "y_test = np.array([11, 8.5, 15, 18, 11])\n",
+        "```\n",
+        "Membuat array NumPy dari list [9, 9, 11, 16, 12] dan mengubah bentuknya menjadi array 2 dimensi dengan 1 kolom kedalam X_test. Membuat array NumPy dari list [11, 8.5, 15, 18, 11] kedalam y_test."
+      ],
+      "metadata": {
+        "id": "Rk73mDBfJAZR"
+      }
     },
     {
       "cell_type": "code",
@@ -849,7 +1034,7 @@
           "height": 80
         }
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1282,6 +1467,20 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Penjelasan Kode\n",
+        "```\n",
+        "model = LinearRegression()\n",
+        "model.fit(X_train, y_train)\n",
+        "```\n",
+        "Membuat sebuah instance (objek) dari kelas LinearRegression yang disediakan oleh library scikit-learn kemudian Melatih model regresi linier menggunakan data training yang diberikan."
+      ],
+      "metadata": {
+        "id": "TSWAwwrqJ3P3"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "from sklearn.metrics import r2_score\n",
@@ -1297,7 +1496,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1307,6 +1506,27 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Penjelasan Kode\n",
+        "```\n",
+        "y_pred = model.predict(X_test)\n",
+        "```\n",
+        "Menggunakan model regresi linier yang telah dilatih (model) untuk memprediksi nilai y (harga tanah) berdasarkan data testing X_test.\n",
+        "```\n",
+        "r2 = r2_score(y_test, y_pred)\n",
+        "```\n",
+        "Menghitung nilai R-squared (koefisien determinasi) untuk mengukur seberapa baik model regresi linier cocok dengan data testing.\n",
+        "```\n",
+        "print(f'R-squared: {r2}')\n",
+        "```\n",
+        " Mencetak nilai R-squared ke konsol menggunakan f-string."
+      ],
+      "metadata": {
+        "id": "aCyQOHPNKDAW"
+      }
     }
   ]
 }
