--- a/Praktikum1/LinearRegression.ipynb
+++ b/Praktikum1/LinearRegression.ipynb
@@ -22,12 +22,12 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/farhnsaptr/DIF62130_B_25_2311532018/blob/main/Praktikum1/California_Housing.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/farhnsaptr/DIF62130_B_25_2311532018/blob/main/Praktikum1/LinearRegression.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "S4zTuRQTUpVL"
       },
@@ -43,6 +43,16 @@
         "from sklearn.metrics import mean_squared_error\n",
         "from sklearn.datasets import fetch_california_housing\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Penjelasan Kode\n",
+        "Mengimport library yang dibutuhkan yaitu pandas, numpy, matplotlib, dan sklearn"
+      ],
+      "metadata": {
+        "id": "UQYFvwHjcTyZ"
+      }
     },
     {
       "cell_type": "code",
@@ -63,7 +73,7 @@
         "id": "_JopaZzRVlKH",
         "outputId": "d9f62fd7-cc2e-4f5f-b7cf-814e7e02a5af"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -401,6 +411,39 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Penjelasan Kode\n",
+        "```\n",
+        "housing = fetch_california_housing()\n",
+        "```\n",
+        "Mengambil dataset California Housing dari library scikit-learn.\n",
+        "```\n",
+        "df = pd.DataFrame(housing.data, columns=housing.feature_names)\n",
+        "```\n",
+        "Menambahkan kolom target (MedHouseValue) ke dalam DataFrame.\n",
+        "```\n",
+        "df['MedHouseValue'] = pd.Series(housing.target)\n",
+        "```\n",
+        "Membuat variabel targets yang berisi kolom target (MedHouseValue) dari DataFrame.\n",
+        "```\n",
+        "targets = df['MedHouseValue']\n",
+        "```\n",
+        "Membuat variabel targets yang berisi kolom target (MedHouseValue) dari DataFrame.\n",
+        "```\n",
+        "inputs = df.drop('MedHouseValue', axis=1)\n",
+        "```\n",
+        "Membuat variabel inputs yang berisi semua kolom dalam DataFrame kecuali kolom target (MedHouseValue).\n",
+        "```\n",
+        "df.head()\n",
+        "```\n",
+        "Mencetak 5 baris pertama dari DataFrame df untuk memberikan gambaran tentang struktur data."
+      ],
+      "metadata": {
+        "id": "Zjk370pQcnX2"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "print(df.shape)"
@@ -412,7 +455,7 @@
         "id": "43WoQ2lkYQR3",
         "outputId": "5b2f881d-5167-423d-8572-c8214e1a1b1a"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -422,6 +465,19 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Penjelasan Kode\n",
+        "```\n",
+        "print(df.shape)\n",
+        "```\n",
+        "Mengembalikan bentuk (shape) dari DataFrame df dalam bentuk tuple (jumlah_baris, jumlah_kolom)."
+      ],
+      "metadata": {
+        "id": "gK0uz65YdqKe"
+      }
     },
     {
       "cell_type": "code",
@@ -436,7 +492,7 @@
         "id": "jiDGM5RwYfQw",
         "outputId": "d8f24e36-caed-4cba-fbaa-151fe78c1601"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -826,7 +882,7 @@
         "id": "-GiaMLafYU-5",
         "outputId": "45cf97e1-984f-4fb3-afff-c8982569a7aa"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -853,6 +909,19 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Penjelasan Kode\n",
+        "```\n",
+        "df.info()\n",
+        "```\n",
+        "Menampilkan informasi ringkas tentang DataFrame df berisikan nama fitur, banyak value, dan tipe data setiap fitur"
+      ],
+      "metadata": {
+        "id": "Js2evIZdeAZq"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# prompt: check df duplicate value\n",
@@ -869,7 +938,7 @@
         "id": "4q8Su-HNYYpN",
         "outputId": "7c360180-6155-4e51-c483-26c8c93dbd6e"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1072,6 +1141,27 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Penjelasan Kode\n",
+        "```\n",
+        "duplicate_rows_df = df[df.duplicated()]\n",
+        "```\n",
+        "Membuat DataFrame baru (duplicate_rows_df) yang berisi baris-baris duplikat dari DataFrame df.\n",
+        "```\n",
+        "print(f\"Number of duplicate rows: {duplicate_rows_df.shape[0]}\")\n",
+        "```\n",
+        "Mencetak jumlah baris duplikat dalam DataFrame.\n",
+        "```\n",
+        "duplicate_rows_df\n",
+        "```\n",
+        "Mencetak baris-baris duplikat yang ditemukan dalam DataFrame."
+      ],
+      "metadata": {
+        "id": "PxovPEoqepak"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "X_train, X_test, y_train, y_test = train_test_split(inputs, targets, test_size=0.3, random_state=42)"
@@ -1079,8 +1169,21 @@
       "metadata": {
         "id": "8LQrNqstYcVq"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Penjelasan Kode\n",
+        "```\n",
+        "X_train, X_test, y_train, y_test = train_test_split(inputs, targets, test_size=0.3, random_state=42)\n",
+        "```\n",
+        "Fungsi dari library scikit-learn yang digunakan untuk membagi dataset menjadi dua subset: training set dan testing set."
+      ],
+      "metadata": {
+        "id": "aIzivqEXfKB7"
+      }
     },
     {
       "cell_type": "code",
@@ -1097,7 +1200,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1110,6 +1213,16 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Penjelasan Kode\n",
+        "Mencetak bentuk (shape) dari X_train, X_test, y_train, y_test."
+      ],
+      "metadata": {
+        "id": "yYyd-8-Of7sQ"
+      }
     },
     {
       "cell_type": "code",
@@ -1126,7 +1239,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1144,6 +1257,31 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Penjelasan Kode\n",
+        "```\n",
+        "scaler = MinMaxScaler()\n",
+        "```\n",
+        "Membuat instance (objek) dari kelas MinMaxScaler yang disediakan oleh library scikit-learn.\n",
+        "```\n",
+        "X_train = scaler.fit_transform(X_train)\n",
+        "```\n",
+        "Melakukan fitting (menghitung parameter scaling) dan transformasi pada data training (X_train).\n",
+        "```\n",
+        "X_test = scaler.transform(X_test)\n",
+        "```\n",
+        "Melakukan transformasi pada data testing (X_test) menggunakan parameter scaling yang telah dihitung dari data training.\n",
+        "```\n",
+        "print(X_train)\n",
+        "```\n",
+        "Mencetak data training yang telah dinormalisasi."
+      ],
+      "metadata": {
+        "id": "-jW_wbAIhLJ0"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "lr_model = LinearRegression()\n",
@@ -1157,7 +1295,7 @@
           "height": 80
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1590,6 +1728,23 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Penjelasan Kode\n",
+        "```\n",
+        "lr_model = LinearRegression()\n",
+        "```\n",
+        "Membuat sebuah instance (objek) dari kelas LinearRegression yang disediakan oleh library scikit-learn.\n",
+        "```\n",
+        "lr_model.fit(X_train, y_train)\n",
+        "```\n",
+        "Melatih model regresi linier menggunakan data training yang diberikan."
+      ],
+      "metadata": {
+        "id": "9dD2T5FNiRa_"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "print(f'Intercept: {lr_model.intercept_}')\n",
@@ -1602,7 +1757,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1614,6 +1769,23 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Pengertian Kode\n",
+        "```\n",
+        "print(f'Intercept: {lr_model.intercept_}')\n",
+        "```\n",
+        "Mencetak nilai intercept (titik potong sumbu y) dari model regresi linier.\n",
+        "```\n",
+        "print(f'Coefficients: {lr_model.coef_}')\n",
+        "```\n",
+        "Mencetak nilai koefisien (slope) dari model regresi linier."
+      ],
+      "metadata": {
+        "id": "vNCBElsYijh0"
+      }
     },
     {
       "cell_type": "code",
@@ -1631,7 +1803,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1642,6 +1814,35 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Pengertian Kode\n",
+        "```\n",
+        "y_pred = lr_model.predict(X_test)\n",
+        "```\n",
+        "Menggunakan model regresi linier yang telah dilatih (lr_model) untuk memprediksi nilai y (target) berdasarkan data testing X_test.\n",
+        "```\n",
+        "mse = mean_squared_error(y_test, y_pred)\n",
+        "```\n",
+        "Menghitung Mean Squared Error (MSE) untuk mengukur seberapa baik model regresi linier cocok dengan data testing.\n",
+        "```\n",
+        "r2 = lr_model.score(X_test, y_test)\n",
+        "```\n",
+        "Menghitung R-squared (koefisien determinasi) untuk mengukur seberapa baik model regresi linier cocok dengan data testing.\n",
+        "```\n",
+        "print(f\"Mean Squared Error: {mse}\")\n",
+        "```\n",
+        "Mencetak nilai Mean Squared Error (MSE) ke konsol.\n",
+        "```\n",
+        "print(f\"R-squared: {r2}\")\n",
+        "```\n",
+        "Mencetak nilai R-squared ke konsol."
+      ],
+      "metadata": {
+        "id": "5xXlWaHfi0kL"
+      }
     },
     {
       "cell_type": "code",
@@ -1660,7 +1861,7 @@
           "height": 472
         }
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1673,6 +1874,32 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Penjelasan Kode\n",
+        "```\n",
+        "plt.scatter(y_test, y_pred)\n",
+        "```\n",
+        "Membuat scatter plot (plot titik) yang membandingkan nilai aktual (y_test) dengan nilai prediksi (y_pred).\n",
+        "```\n",
+        "plt.xlabel('Actual Values')\n",
+        "plt.ylabel('Predicted Values')\n",
+        "```\n",
+        "Menambahkan label pada sumbu x. Labelnya adalah 'Actual Values'.Menambahkan label pada sumbu y. Labelnya adalah 'Predicted Values'.\n",
+        "```\n",
+        "plt.title('Actual vs. Predicted Values')\n",
+        "```\n",
+        "Menambahkan judul pada plot. Judulnya adalah 'Actual vs. Predicted Values'.\n",
+        "```\n",
+        "plt.show()\n",
+        "```\n",
+        "Menampilkan plot yang telah dibuat ke layar."
+      ],
+      "metadata": {
+        "id": "IhxvX-ccj7CV"
+      }
     }
   ]
 }
